backend/com.renthub/k8s/overlays/release/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renthub-backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - renthub.reco6.com
    secretName: renthub-prod-tls
  rules:
  - host: renthub.reco6.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: renthub-backend
            port:
              number: 80
